selenide implemented in all dialog classes